<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_info_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/view_info_data" >

        <ImageView
            android:id="@+id/view_info_status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/view_info_status"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toTopOf="@id/view_info_tag"
            app:layout_constraintEnd_toStartOf="@id/view_info_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view_info_tag"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

        <TextView
            android:id="@+id/view_info_tag"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_info_status"
            app:layout_constraintBottom_toTopOf="@id/view_info_date_time"
            android:text="@string/view_info_tag" />

        <TextView
            android:id="@+id/view_info_date_time"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/view_info_tag"
            app:layout_constraintBottom_toTopOf="@id/view_info_coords"
            app:layout_constraintEnd_toStartOf="@id/view_info_subs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="7"
            android:text="@string/view_info_date_time" />

        <TextView
            android:id="@+id/view_info_subs"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="@id/view_info_date_time"
            app:layout_constraintBottom_toBottomOf="@id/view_info_date_time"
            app:layout_constraintEnd_toStartOf="@id/view_info_subs_image"
            app:layout_constraintStart_toEndOf="@id/view_info_date_time"
            app:layout_constraintHorizontal_weight="3"
            android:text="@string/view_info_subs" />

        <ImageView
            android:id="@+id/view_info_subs_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/view_info_subs_image"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="@id/view_info_date_time"
            app:layout_constraintBottom_toBottomOf="@id/view_info_date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_info_subs"
            app:layout_constraintDimensionRatio="1"
            app:srcCompat="@drawable/image_grey" />

        <TextView
            android:id="@+id/view_info_coords"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/view_info_date_time"
            app:layout_constraintBottom_toTopOf="@id/view_info_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/view_info_coords" />

        <TextView
            android:id="@+id/view_info_address"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/view_info_coords"
            app:layout_constraintBottom_toTopOf="@id/view_info_pictures_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/view_info_address" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_info_pictures_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/view_image_tile"
            tools:itemCount="3"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_info_address"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@id/view_info_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/view_info_comments" >

        <TextView
            android:id="@+id/view_info_comment"
            android:textAppearance="?attr/textAppearanceBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_info_comment" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
