<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ekdorn.hogweedgo.activities.MainActivity">

    <TextView
        android:id="@+id/auth_description"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/auth_state_switch"
        app:layout_constraintHeight_percent="0.2"
        android:text="@string/auth_description" />

    <Button
        android:id="@+id/auth_state_switch"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_description"
        app:layout_constraintBottom_toTopOf="@id/auth_input_card"
        android:text="@string/auth_state_switch_sign_in" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/auth_input_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_state_switch"
        app:layout_constraintBottom_toTopOf="@id/auth_accept_checkbox"
        app:layout_constraintWidth_percent="0.8"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/auth_container_layout_container"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/auth_container_layout_description"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/auth_container_layout_description_sign_in"
                app:layout_constraintBottom_toTopOf="@id/auth_email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auth_email_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/auth_password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_container_layout_description"
                app:errorEnabled="true"
                android:hint="@string/auth_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/auth_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auth_password_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/auth_confirmation_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_email_layout"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:hint="@string/auth_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/auth_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auth_confirmation_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/auth_send_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_password_layout"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:hint="@string/auth_confirmation_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/auth_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/auth_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_confirmation_layout"
                android:enabled="false"
                android:text="@string/auth_send_button_sign_in" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <CheckBox
        android:id="@+id/auth_accept_checkbox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_input_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:text="@string/auth_accept_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>
