<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/edit_info_caption"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_info_tag_layout"
        app:layout_constraintHeight_percent="0.075"
        android:text="@string/edit_info_caption" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_info_tag_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/edit_info_caption"
        app:layout_constraintBottom_toTopOf="@id/edit_info_time"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintHeight_percent="0.125"
        android:hint="@string/edit_info_tag_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_info_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/edit_info_time"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_info_date"
        app:layout_constraintTop_toBottomOf="@id/edit_info_tag_layout"
        app:layout_constraintBottom_toTopOf="@id/edit_info_address_layout"
        app:layout_constraintHeight_percent="0.075"
        android:padding="10dp"
        android:text="@string/edit_info_time" />

    <TextView
        android:id="@+id/edit_info_date"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_info_time"
        app:layout_constraintTop_toBottomOf="@id/edit_info_tag_layout"
        app:layout_constraintBottom_toTopOf="@id/edit_info_address_layout"
        app:layout_constraintHeight_percent="0.075"
        android:padding="10dp"
        android:text="@string/edit_info_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_info_address_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/edit_info_time"
        app:layout_constraintBottom_toTopOf="@id/edit_info_pictures_layout"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="128"
        tools:layout_editor_absoluteX="143dp"
        app:layout_constraintHeight_percent="0.175"
        android:hint="@string/edit_info_address_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_info_pictures_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/view_image_tile"
        tools:itemCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_info_address_layout"
        app:layout_constraintBottom_toTopOf="@id/edit_info_comment_layout"
        app:layout_constraintHeight_percent="0.175" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_info_comment_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_info_pictures_layout"
        app:layout_constraintBottom_toTopOf="@id/edit_info_send_button"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="1024"
        tools:layout_editor_absoluteX="138dp"
        app:layout_constraintHeight_percent="0.3"
        android:hint="@string/edit_info_comment_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_info_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLines="8" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_info_send_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/edit_info_send_button"
        app:layout_constraintTop_toBottomOf="@id/edit_info_comment_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
