<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent" >

    <ImageView
        android:id="@+id/pref_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pref_text"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image_grey"
        android:contentDescription="@string/pref_picture" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pref_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/pref_picture"
        app:layout_constraintEnd_toEndOf="@id/pref_picture"
        android:elevation="3dp"
        app:fabCustomSize="@dimen/close_fab_size"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="-16dp"
        android:foreground="@drawable/circle_white_border"
        android:src="@drawable/ic_delete_white"
        android:backgroundTint="@color/colorCancel"
        android:contentDescription="@string/pref_close_button" />

    <TextView
        android:id="@+id/pref_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/pref_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:text="@string/pref_text" />

</androidx.constraintlayout.widget.ConstraintLayout>